--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "incremental": true,
     "skipLibCheck": true,
     "strict": false,          // disables all strict type checking (optional)
+    "noEmitOnError": false,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
