--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.2",
     "mongoose": "^8.19.1",
     "node-modules": "^1.0.1",
+    "opencode-ai": "^1.0.223",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "redis": "^5.9.0",
